fix product title on mobile

--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,6 +1,6 @@
 .p {
 	width: 30%;
-	height: 28vh;
+	height: 29vh;
 	margin: 20px 10px;
 	border: 2px solid rgb(243, 242, 242);
 	border-radius: 10px 10px 0px 0px;
@@ -138,6 +138,7 @@
 	}
 
 	.p-name {
+		font-size: 15px;
 		margin-top: 25px;
 	}
 
